--- a/index.html
+++ b/index.html
@@ -498,8 +498,8 @@
                     </div>
                     <div class="contact-info">
                         <h3>Contact Information</h3>
-                        <p class="contact-item">hello@leanflow.com</p>
-                        <p class="contact-item">Schedule demo: leanflow.com/demo</p>
+                        <p class="contact-item">info@lean365.ai</p>
+                        <p class="contact-item">Schedule demo: leanflowhq.com/demo</p>
                         <p class="thank-you">Thank you for your consideration</p>
                     </div>
                 </div>
